--- a/src/Etap1/style.scss
+++ b/src/Etap1/style.scss
@@ -27,3 +27,11 @@ body {
   width: 100%;
   padding: 10px;
 }
+
+.day6 {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  padding: 10px;
+
+  width: 100vw;
+  height: 100vh;
+}
